Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126723

[REG 6.6 → 6.7] TableModel appendRow() no longer works.

XMLWordPrintable

    • 43f7e0a65 (dev), b80933aed (6.8), e8db46a66 (6.7), 3157d863c (tqtc/lts-6.5)

      The TableModel::appendRow() method does not work as documented (https://doc.qt.io/qt-6/qml-qt-labs-qmlmodels-tablemodel.html).

      When calling TableModel::appendRow(), the following error is encountered, and the new row is not added:

      QML TableModel: appendRow(): expected "row" argument to be a QJSValue, but got QVariantMap instead:

      To reproduce the issue, run the attached example project.

      The issue doesn't appear in Qt 6.6.3

       

       

        1. tabmodeltest.zip
          2 kB
          Mehdi Belila
        For Gerrit Dashboard: QTBUG-126723
        # Subject Branch Project Status CR V

            santhoshkumar Santhosh Kumar Selvaraj
            mahdi.belila Mehdi Belila
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes