Support parsing variant map in qml table model APIs

In general, the quick compiler generates native code when AOT enabled
for better performance. This can cause issues in the qml table model
APIs (such as insertRow(), appendRow(), setRow()), as these can parse
only js object but not a variant map (even though internally these APIs
convert those js object to variant map).

In this patch, the qml table model APIs are enabled to parse both js
and variant map objects.

Fixes: QTBUG-126723
Change-Id: I927feb9e3ee83004ff044a9cf33848452ff1f3cd
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 43f7e0a656fa38c51ed6fbb64853eb6953ab11a3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b80933aed551a5d899c1dc0b79bce6853b74cffc)
(cherry picked from commit e8db46a66f8a940c97efbbd8e9d88c26707c6d8f)